deploy/prod/identity-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - identity-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: identity-api
        image: fcavarzare/projeto-reserva:identity-api-0ce34dfac9cda9457e61dc70566fb8ac23d9b14c
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "50m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api-service
  namespace: prod
spec:
  selector:
    app: identity-api
  ports:
  - port: 80
    targetPort: 8080
