deploy/prod/identity-api/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-api-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: identity-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - podSelector:
        matchLabels:
          app: web-ui
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: sqlserver
    - podSelector:
        matchLabels:
          app: redis
    - podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - protocol: TCP
      port: 1433
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 5672
